--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-server.port=9000
+server.port=8083
+
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url = jdbc:oracle:thin:@//10.0.222.29:1521/ccs4db
+spring.datasource.username = DEMO
+spring.datasource.password = 123456
 
