--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-server.port=9000
+server.port=8083
+#Database
+spring.datasource.url=jdbc:mysql://localhost:3306/withKotlin?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
